# claude_wiki_agent

./: .gitignore  DESIGN_RATIONALE.md  RATIONALE.md  README.md  pyproject.toml  requirements.txt
wiki_agent/: __init__.py  agent.py  cli.py  prompts.py  wikipedia.py
wiki_agent/evals/: cases.jsonl  judge.py  run_evals.py
wiki_agent/evals/baseline/: report_20260625_002351_no_read_page.json  report_20260625_005923_with_read_page.json  run_20260625_002351.json  run_20260625_005923.json
